hphp/test/slow/string_length_overflow/output_buffer.php.expectf
Fatal error: StringBuffer exceeded %d bytes of memory in %s on line 6
